--- a/lawexamprep/pom.xml
+++ b/lawexamprep/pom.xml
@@ -15,6 +15,13 @@
 
 	<dependencies>
 
+		<!-- Linked Lawexamprep backend project -->
+		<dependency>
+			<groupId>com.hoofhe</groupId>
+			<artifactId>lawexamprepbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<!-- JAVA EE API -->
 		<dependency>
 			<groupId>javax</groupId>
